@@ -1,6 +1,15 @@
-                CHANGES in `mboost' VERSION 2.2-2 (2013-XX-XX, rYYY)
+                CHANGES in `mboost' VERSION 2.2-3 (2013-XX-XX, rYYY)
 
-  o  speed up checking of manual by changing some computaions (e.g. reduce 
+  o  stabsel was recoded and now uses different terminology and a better
+     tested code base
+
+  o  fixed bugs in survival families:
+     -  offset in all survival families was based on max(survtime) instead
+     	of max(log(survtime));
+     -  offset in CoxPH can't be computed from Cox Partial LH as constants
+     	are canceled out; Use fixed offset instead;
+
+  o  speed up checking of manual by changing some computations (e.g. reduce
      mstop) or exclude code from checking via \dontrun{}
 
   o  small improvements in manual
@@ -25,7 +34,7 @@
   o  fixed bug in brandom: now really use contrasts.arg = "contr.dummy" per
      default.
 
-  o  removed tests/ folder and .Rout.save files for vignettes from the CRAN 
+  o  removed tests/ folder and .Rout.save files for vignettes from the CRAN
      release
 
   o  small improvements in manual
